# mcp-local-reference

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  documentation_standards.md  principles.md
docs/code_mcp/: README.md  architecture.md  usage.md
docs/presentation/: README.md  presentation_final.html
docs/project/: architecture.md  docs_audit.md  infrastructure.md  requirements.md  tech_stack.md
docs/reference/: README.md
docs/reference/adrs/: adr-001-direct-sqlite-access.md  adr-002-chromadb-for-vectors.md  adr-003-pymupdf-for-pdf.md
docs/superpowers/plans/: 2026-04-14-incremental-indexing-perf.md  2026-04-27-collection-editing.md  2026-04-27-tag-removal.md  2026-05-08-add-reference.md
docs/superpowers/specs/: 2026-04-14-incremental-indexing-perf-design.md  2026-04-27-collection-editing-design.md  2026-04-27-tag-removal-design.md  2026-05-08-add-reference-design.md
docs/tasks/: README.md
src/code_mcp/: __init__.py  cli.py  code_embedder.py  code_fts.py  code_manager.py  code_watcher.py  config.py  models.py  parser.py  server.py
src/mcp_local_reference/: __init__.py  __main__.py  config.py  server.py
src/mcp_local_reference/services/: image_processor.py  pdf_processor.py  vector_store.py  zotero_api_client.py  zotero_client.py
tests/: README.md  conftest.py  test_add_reference.py  test_auto_tag.py  test_collections.py  test_image_processor.py  test_pdf_processor.py  test_zotero_client.py
tests/code_mcp/: conftest.py  test_code_embedder.py  test_code_fts.py  test_code_manager.py  test_parser.py
tests/test_resolvers/: test_arxiv.py  test_crossref.py  test_openlibrary.py
(+19 files in other folders)
